Fix flex error wrap

--- a/src/app/page.css
+++ b/src/app/page.css
@@ -92,7 +92,7 @@
 .projSectionsCont {
   margin: 10em 5em 0em 5em;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row;
   width: 100%;
 }
 
